--- a/Assignment-simulationlab/Lab_Assignment_1.ipynb
+++ b/Assignment-simulationlab/Lab_Assignment_1.ipynb
@@ -17,8 +17,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Name: Md Sadman Sayed Ratul <br>\n",
-        "Id: 2215151007 <br>\n",
+        "Name: Md Maksudur Rahman <br>\n",
+        "Id: 2215151011<br>\n",
         "Section : A1"
       ],
       "metadata": {
@@ -56,8 +56,8 @@
         "y1 = np.random.rand(15)\n",
         "y2 = np.random.rand(15)\n",
         "\n",
-        "plt.plot(x, y1, marker='o', linestyle='-', label='Vector 1', color='b')\n",
-        "plt.plot(x, y2, marker='s', linestyle='--', label='Vector 2', color='r')\n",
+        "plt.plot(x, y1, marker='o', linestyle='-', label='Vector 1', color='g')\n",
+        "plt.plot(x, y2, marker='s', linestyle='--', label='Vector 2', color='orange')\n",
         "\n",
         "plt.xlabel('Index')\n",
         "plt.ylabel('Value')\n",
@@ -78,7 +78,7 @@
         "\n",
         "labels = ['A', 'B', 'C', 'D']\n",
         "\n",
-        "sns.heatmap(matrix, annot=True, cmap='coolwarm', xticklabels=labels, yticklabels=labels)\n",
+        "sns.heatmap(matrix, annot=True, cmap='viridis', xticklabels=labels, yticklabels=labels)\n",
         "\n",
         "\n",
         "plt.title(\"4x4 Random Matrix Heatmap\")\n",
